# uchroma

./: .buildinfo  .gitignore  .irisconfig  .travis.yml  CLAUDE.md  Cargo.toml  MANIFEST.in  Makefile  README.md  TODO  byte_args.py  color.py  debug_razer.py  frame.py  genindex.html  header.txt  index.html  led.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  report.py  search.html  searchindex.js  setup.cfg  setup.html  setup.py  test_brightness.py  uchroma.blending.html  uchroma.client.client.html  uchroma.client.cmd.html  uchroma.client.dbus_client.html  uchroma.client.html  uchroma.color.html  uchroma.dbus_utils.html  uchroma.fxlib.html  uchroma.fxlib.plasma.html  uchroma.fxlib.rainbow.html  uchroma.fxlib.ripple.html  (+34 more)
.github/workflows/: ci.yml  docs.yml  ppa-publish.yml  publish.yml  release.yml
_modules/: index.html
_modules/pydbus/: generic.html
_modules/traitlets/: traitlets.html
_modules/uchroma/: blending.html  color.html  dbus_utils.html  input_queue.html  layer.html  renderer.html  traits.html  util.html
_sources/: modules.rst.txt  uchroma.client.cmd.rst.txt  uchroma.client.dbus_client.rst.txt  uchroma.client.rst.txt  uchroma.color.rst.txt  uchroma.dbus_utils.rst.txt  uchroma.fxlib.ripple.rst.txt  uchroma.input_queue.rst.txt  uchroma.server.byte_args.rst.txt  uchroma.server.config.rst.txt  uchroma.server.device_base.rst.txt  uchroma.server.frame.rst.txt  uchroma.server.fx.rst.txt  uchroma.server.input.rst.txt  uchroma.server.keypad.rst.txt  uchroma.server.laptop.rst.txt  uchroma.server.macro.rst.txt  uchroma.util.rst.txt  uchroma.version.rst.txt
_static/: agogo.css
benches/: benchmarks.rs
debian/: changelog  control  copyright  rules  uchroma.install  uchroma.postinst
debian/services/: uchromad.service
debian/source/: options
doc/: Makefile  conf.py  index.rst  make.bat  uchroma.blending.rst  uchroma.byte_args.rst  uchroma.client.client.rst  uchroma.device.rst  uchroma.device_base.rst  uchroma.device_manager.rst  uchroma.frame.rst  uchroma.fx.rst  uchroma.fxlib.plasma.rst  uchroma.fxlib.rainbow.rst  uchroma.fxlib.rst  uchroma.headset.rst  uchroma.keyboard.rst  uchroma.layer.rst  uchroma.led.rst  uchroma.log.rst  uchroma.models.rst  uchroma.mouse.rst  uchroma.renderer.rst  uchroma.report.rst  uchroma.rst  uchroma.server.anim.rst  uchroma.server.crc.rst  uchroma.server.dbus.rst  uchroma.server.device.rst  uchroma.server.device_manager.rst  uchroma.server.fixups.rst  uchroma.server.hardware.rst  uchroma.server.headset.rst  uchroma.server.keyboard.rst  uchroma.server.led.rst  uchroma.server.mouse.rst  uchroma.server.power.rst  uchroma.server.prefs.rst  uchroma.server.report.rst  uchroma.server.rst  (+4 more)
docs/: .prettierrc  HARDWARE_REFACTOR_PLAN.md  index.md  package-lock.json  package.json  razer-device-database.md  razer-protocol-reference.md
docs/.vitepress/: config.mts
docs/cli/: advanced.md  animations.md  brightness.md  devices.md  effects.md  index.md  power.md  profiles.md
docs/developers/: advanced.md  architecture.md  colors.md  creating-effects.md  dbus-modernization-plan.md  index.md  layer-api.md  traits.md
docs/effects/: custom.md  hardware.md  index.md
docs/guide/: configuration.md  gtk-app.md  index.md  installation.md  quick-start.md  troubleshooting.md
docs/reference/: dbus-api.md  devices.md  index.md  razer-device-database.md  razer-protocol-reference.md
install/: 70-uchroma.rules  uchromad.service
install/apparmor/: usr.bin.uchromad
install/dbus/: io.uchroma.service  org.chemlab.UChroma.service  tech.hyperbliss.uchroma.service
install/desktop/: io.uchroma.gtk.desktop
install/systemd/: uchromad.service
install/udev/: 70-uchroma.rules
packaging/arch/: PKGBUILD  uchroma.install
packaging/fedora/: uchroma.spec
rust/: blending.rs  compositor.rs  crc.rs  drawing.rs  lib.rs  plasma.rs
rust/effects/: aurora.rs  embers.rs  kaleidoscope.rs  metaballs.rs  mod.rs  nebula.rs  ocean.rs  vortex.rs
rust/hid/: device.rs  device_info.rs  enumerate.rs  error.rs  frame.rs  headset.rs  mod.rs  report.rs
scripts/: audit_hardware_db.py  benchmark.py  devstuff  uchroma  uchromad  update-headers
snap/: gi-wrap  snapcraft.yaml
systemd/: org.chemlab.UChroma.service  uchromad.service
tests/: conftest.py  test_config.py  test_dbus_utils.py  test_traits.py  ubuntu-16.04-py3.5.dockerfile
tests/client/: __init__.py  test_cli_base.py  test_commands.py  test_device_matcher.py  test_device_service_selection.py  test_main.py  test_output.py  test_trait_display.py
tests/fxlib/: test_effects.py
tests/integration/: test_rust_pipeline.py
tests/rendering/: __init__.py  test_renderer.py
tests/server/: mock_hid.py  test_anim.py  test_byte_args.py  test_capabilities.py  test_commands.py  test_config.py  test_device_base.py  test_effects.py  test_frame.py  test_fx.py  test_hardware.py  test_hidadapter.py  test_led.py  test_mock_hid.py  test_polling.py  test_prefs.py  test_protocol.py  test_report.py  test_wireless.py
tests/unit/: test_aurora_rust.py  test_blending.py  test_blending_rust.py  test_color.py  test_compositor_rust.py  test_dbus_utils.py  test_drawing_rust.py  test_embers_rust.py  test_input_queue.py  test_kaleidoscope_rust.py  test_layer.py  test_nebula_rust.py  test_ocean_rust.py  test_traits.py  test_util.py  test_vortex_rust.py
uchroma/: __init__.py  _layer.py  _layer.pyx  anim.py  blending.py  byte_args.py  client.py  cmd.py  color.py  colorlib.py  config.py  crc.pyx  dbus.py  dbus_utils.py  device.py  device_base.py  device_manager.py  drawing.py  driver.py  fixups.py  frame.py  fx.py  hardware.py  headset.py  input.py  input_queue.py  keyboard.py  keypad.py  laptop.py  layer.py  led.py  log.py  macro.py  models.py  mouse.py  prefs.py  renderer.py  report.py  server.py  standard_fx.py  (+4 more)
uchroma/client/: __init__.py  cli_base.py  client.py  cmd.py  colors.py  dbus_client.py  device_matcher.py  device_service.py  main.py  output.py  trait_display.py
uchroma/data/: headset.yaml  keyboard.yaml  keypad.yaml  laptop.yaml  mouse.yaml  mousepad.yaml
udev/: 90-uchroma.rules  99-uchroma.rules
(+143 files in other folders)
