[package]
name = "uchroma-native"
version = "1.9.90"
edition = "2021"
description = "Native Rust extensions for uchroma"
license = "LGPL-3.0-only"

[lib]
name = "_native"
path = "rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", default-features = false, features = ["abi3-py311"] }
numpy = "0.27"

# Async HID support
nusb = { version = "0.2", features = ["tokio"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "sync"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
thiserror = "2.0"

[dev-dependencies]
criterion = "0.6"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
