[project]
name = "uchroma"
version = "1.1.0"
description = "Userspace RGB control for Razer Chroma peripherals"
readme = "README.md"
license = "LGPL-3.0-only"
requires-python = ">=3.10"
authors = [{ name = "Stefanie Kondik", email = "stef@hyperbliss.tech" }]
keywords = ["razer", "chroma", "rgb", "keyboard", "mouse", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "argcomplete",
    "coloraide>=4.0",
    "colorlog",
    "dbus-fast>=2.0",
    "evdev",
    "frozendict",
    "hid",
    "hsluv",
    "numpy",
    "pyudev",
    "ruamel.yaml",
    "scikit-image",
    "traitlets",
    "wrapt",
]

[project.optional-dependencies]
gtk = [
    "pygobject>=3.50",
]

[project.scripts]
uchroma = "uchroma.client.client:run_client"
uchromad = "uchroma.server.server:run_server"
uchroma-gtk = "uchroma.gtk:main"

[project.entry-points."uchroma.plugins"]
renderers = "uchroma.fxlib"

[build-system]
requires = ["setuptools>=61", "cython>=3.0", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "uchroma",
    "uchroma.fxlib",
    "uchroma.client",
    "uchroma.server",
    "uchroma.gtk",
    "uchroma.gtk.models",
    "uchroma.gtk.widgets",
    "uchroma.gtk.panels",
    "uchroma.gtk.services",
    "uchroma.gtk.resources",
]
include-package-data = true

[tool.setuptools.package-data]
"uchroma.server" = ["data/*.yaml"]
"uchroma.gtk.resources" = ["*.css"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "cython>=3.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]
